syntax ="proto3";

package event;

option go_package = "./gen/";

service EventService {
    rpc NewEvent (CreateEventRequest) returns (CreateEventResponse);
    rpc GetEventDetails (GetEventRequest) returns (GetEventResponse);
    // rpc GetEvents (GetEventsRequest) returns (GetEventsResponse);
    // rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse);
    // rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse);
}

message CreateEventRequest {
    string event_title = 2;
    string event_description = 3;
    string event_location = 4;
    string event_date = 5;
    string event_start_time = 6;
    string event_end_time = 7;
    string created_by = 8;
    int32 total_slots = 9;
}

message CreateEventResponse {
    
    string message = 1;
}

message GetEventRequest { 
    string event_id = 1;
}

message GetEventResponse {
    
    string event_id = 1;
    string event_title = 2;
    string event_description = 3;
    string event_location = 4;
    string event_date = 5;
    string event_start_time = 6;
    string event_end_time = 7;
    string created_by = 8;
    int32 total_slots = 9;
}